# poggers-lang

./: .stylish-haskell.yaml  LICENSE  README.md  poggerslang.cabal  shell.nix
.github/workflows/: haskell.yml
app/: Eval.hs  Lexer.hs  LuaPrinter.hs  Main.hs  Parser.hs
app/LuaPrinter/: LuaPrinter.hs
docs/: grammar.md  notes.md  output_syntax_thoughts.lua
src/: Eval.hs  Lexer.hs  LuaPrinter.hs  Parser.hs
test/: GoldenTests.hs  Spec.hs
test/snapshots/: hello_world.output  hello_world.pog  lambda.output  lambda.pog  operations.output  operations.pog
