cabal-version:      3.0
name:               poggerslang
version:            0.1.0.0
homepage:           https://github.com/bronen/poggerslang
license:            MIT
license-file:       LICENSE
author:             Brenno Rodrigues
maintainer:         brennopereira6@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable poggerslang
    import:           warnings
    main-is:          Main.hs
    build-depends:    split, base ^>=4.16.4.0 
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: Lexer Parser Eval LuaPrinter.LuaPrinter

library
  source-dirs: app
  dependencies:
    - split