cabal-version:      3.0
name:               poggerslang
version:            0.1.0.0
homepage:           https://github.com/bronen/poggerslang
license:            MIT
license-file:       LICENSE
author:             Brenno Rodrigues
maintainer:         brennopereira6@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    exposed-modules: Lexer Parser Eval LuaPrinter
    other-modules:
        Paths_poggerslang
    hs-source-dirs: src
    build-depends:
        base
      , containers
      , split
    default-language: Haskell2010

executable poggerslang-exe
    import:         warnings
    main-is:        Main.hs
    other-modules:
        Paths_poggerslang
    hs-source-dirs:
        app
    build-depends:
        base
      , poggerslang
    default-language: Haskell2010

Test-Suite poggerslang-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        GoldenTests
        Paths_poggerslang
    hs-source-dirs:
        test
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base
      , tasty
      , tasty-hunit
      , tasty-golden
      , filepath
      , bytestring
      , utf8-string
      , poggerslang
    default-language: Haskell2010